# ChangeLog for dev-python/urllib3
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/urllib3/ChangeLog,v 1.14 2014/03/07 09:13:07 radhermit Exp $

*urllib3-1.8-r1 (07 Mar 2014)

  07 Mar 2014; Tim Harder <radhermit@gentoo.org> -urllib3-1.8.ebuild,
  +urllib3-1.8-r1.ebuild:
  Properly conditionalize dev-python/backports-ssl-match-hostname dep for
  python2* only.

*urllib3-1.8 (06 Mar 2014)

  06 Mar 2014; Tim Harder <radhermit@gentoo.org> +urllib3-1.8.ebuild:
  Version bump.

  06 Nov 2013; Mike Gilbert <floppym@gentoo.org> urllib3-1.7.1.ebuild:
  Restore python 3 support.

  08 Oct 2013; Michał Górny <mgorny@gentoo.org> urllib3-1.7.1.ebuild:
  Add missing dev-python/mock dependency. Clean up the ebuild.

*urllib3-1.7.1 (02 Oct 2013)

  02 Oct 2013; Patrick Lauer <patrick@gentoo.org> +urllib3-1.7.1.ebuild:
  Bump

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> urllib3-1.6.ebuild,
  urllib3-1.7.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*urllib3-1.7 (26 Aug 2013)

  26 Aug 2013; Patrick Lauer <patrick@gentoo.org> +urllib3-1.7.ebuild:
  Bump

  11 May 2013; Ian Delaney <idella4@gentoo.org> urllib3-1.6.ebuild:
  delete stray 'local test'

*urllib3-1.6 (09 May 2013)

  09 May 2013; Ian Delaney <idella4@gentoo.org> +urllib3-1.6.ebuild:
  bump; added pypy support, fix to setup.cfg -> fixes testsuite, fixes Bug
  #468236

*urllib3-1.5-r1 (25 Mar 2013)

  25 Mar 2013; Matthew Thode <prometheanfire@gentoo.org> +urllib3-1.5-r1.ebuild:
  updating urllib3 to support distutils-r1

  19 Mar 2013; Patrick Lauer <patrick@gentoo.org> urllib3-1.5.ebuild:
  Restrict tests for 3.2 too as tornado is missing there

  06 Oct 2012; Anthony G. Basile <blueness@gentoo.org> urllib3-1.5.ebuild:
  keyword ~arm, bug #437250

  20 Aug 2012; Mike Gilbert <floppym@gentoo.org> urllib3-1.5.ebuild:
  Drop doc use flag, depend on setuptools.

*urllib3-1.5 (19 Aug 2012)
