@@ -11,17 +11,17 @@ EBUILD urllib3-1.5.ebuild 977 SHA256 25ca6bdde022202986040d6ac129b5befaed4d6eb8a
 EBUILD urllib3-1.6.ebuild 1103 SHA256 98122c43558bac3fac81fd364296a641bdb58dd27d492e313e59ebea65bcdd6b SHA512 6c8aa8ba947c03739154a7321019ff525b77ad3d9103cdc653af7a80795d7144cd19b5165a7b83c678125bf66f76d11894f222a64ebd9916b1e83425b7d03b9c WHIRLPOOL cd0ba405e6ee085b40ee48c699c54dd7c84f32e81f3e48c25084943998d377175f60ae3be036a687ea778a97308f0119e51f13f8244a58aeb6c8db37cf9c58da
 EBUILD urllib3-1.7.1.ebuild 1157 SHA256 6234360d7ccacb79c4452a84ea3e2d79c8950cea09617f4497192135f832c628 SHA512 c0bd2a36b5b055fc6237a1f924c59e944ebbc14ef4713fa0a9eea4cee73ca1bd6b76caef088a546c8d91fe0e11a155d9cd9b0c5574cd9b4a35b2878969715858 WHIRLPOOL d959abbfa3cd0e6aa4fd656295eae6a58197fe26c6b9c3a046169e057850adaf5fce2cd40e755fa0484cda135a1bc4f969f3a09e86367229a9e0af16b820b04a
 EBUILD urllib3-1.7.ebuild 1103 SHA256 981ca54db6a65d470f6358053522196e399a44fa9f326d22238d9d95c2d43f85 SHA512 eaa991528c1d0c7d0411ab21e79d021fb8bfbe3e0e2933ce009c4aaca34e153c37fba5af0ddafe9fdf428a393f40ffc33eef10519007fee87d187283666a3e0a WHIRLPOOL 9da35b6a010999135ef7e552cb416ed9cbe650fce98714fd588b4c30cee0a9ea5ac09c5728c6b6fc3289e1c2bf134bb97248e02989ab5219e45d6df75f1ee728
-EBUILD urllib3-1.8-r1.ebuild 1272 SHA256 25a8716779fc7cd16bb2815bade6d299643fc9944fb40a00ae8febfd9b552a93 SHA512 4a16bde680d4c43433bd4938d6710a7d671ce3ba500b7277aba47de91f34f5a116add7e88094d923c02805f1c9c9aa56356a1477a992ed8ed3687d16e43a65ff WHIRLPOOL a87fe514459ff292cb2dbd16590242523835ef583fc41526e27d92b7f098909cea75c778b072a67e4884e7daabf6b5bddb831a05ce12234d7b41ac8f270f1bbf
-MISC ChangeLog 2092 SHA256 b3104de6509351afcf8c0d422c53b43164e2dea6498bd77e18530a7fe20e9176 SHA512 7a69dd50c9d12a8f29d2d384cc26b13a477e047ea4196f6cf7b9a6a9801517826d0f14d853deea522b5cb60e949da624c3afa4463982e8e550f7bff5f17aa16b WHIRLPOOL e007f03410065d0a1630d158f535d4667372e5ba08253d68daf2a189da73838b9acc685f9d09d12687d47351bea47d4085ca6aa24c586d87845882864ec83128
+EBUILD urllib3-1.8-r1.ebuild 1280 SHA256 f93d7d151a64fc57f20b53bb8660f847d76fcd5dbc3fb6cbab971a3463bad961 SHA512 87cc4035f678c862e2cbc41b74ff458eddeae833790940488109fb48461ad18e6b9d60069ec8f581ad9f96e15ee2eee73cc25a208f6550869aafc071110b298c WHIRLPOOL 4055cfe9f9343efa0352ed1bf218299315ecf747f653f6c83cb664dc7b889db3f139ed573456ed9e797338425d7855ea655fa59f196bc6866637c72544d1dd52
+MISC ChangeLog 2229 SHA256 c97fa46c8ddde2753db45a5bd257aec3967eb29a4e273956fca2120d2313e6ae SHA512 b5e8f4cf9a0e301a9660447ea1e6752eb7b58cb0cdb78febc0e4ff521abf140c5bd2ce2d0cea0dbea7674ca1f056167dc78d75578d658cc3659a2db69de8a7d0 WHIRLPOOL 5a83a5175b13ff5e452f822328fd94eaa921ec2a743f1245dafc320824900d91caf39e04a2226da6243c2b1f832eb4ef86ea0ddfe145b9d04e8807874b26ba71
 MISC metadata.xml 230 SHA256 783d7ab5ebaca687ef2ba45f8c567e93e45eb308a515f0d5ec28afc1e0fe652b SHA512 9f624d4ed6ed478e14955782355c19c0f92198d23bf9c4422e11d38b978f062f781a125883b43ea4c5fc7a1002e08db61cdb59bfc5e7e40c50361869913abf87 WHIRLPOOL 183ead4fc7c1b5dd984879f30ed2fcf7ed855a38edb1747b4000dc1dbe17fc19cf101345c60ed85d996102879ed4a786d8f5227436b978cc910edd3b2727cf89
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJTGY2pAAoJEEqz6FtPBkyjd1oIALPF/c1/Ql/nw39+iI3JcfXK
-83lBT27EgAf/0zhM/fOxaBOVQw1k2tpuKpMYgVjf66WcO6GmpVMtBOV+8+QJpQaX
-lVSgKmq/S9bpBBolIc9CmMl3tTjGwF1hU0QvUtwtF18JbDCVW2KxvU14/ltOxMTQ
-uKTRsBJIbrzeufnDJCpsIAwVp/DhX9RAask42VW/BEA+7UUjiizeMi7ki54xKarC
-mZVIKMv7Ynsbft67PaxfDkMbCUc/z5zDgXWDMPoz1IZxZ02w1u+7cr4nb5m6/zaJ
-nIfZPG0WYsulncetsujtbzvjezyeTVRJScd2D3Pa//SKBvt4kVq496tYigJz3i4=
-=FEE8
+iQEcBAEBCAAGBQJTGh/xAAoJEEqz6FtPBkyj/8sH/RkSvvnxIolf7AERABNm83j4
+ld/F+XfZXsV41SuuHcFrEr3mhQ20jKhNv1RNTM8g4qAyIAk2QBOLZX7vT7szawh1
+AvmC0PiE7eByL8gdlTfQTvVZE7fBotccC0JmbUoua+L37xNUTMMvcCaFCEpgeJU0
+oBnr9SvgFkUrru2J2uBYG1jEmAoCMgY3kb0Gygisf8XyjojCuVO9RRyM3t2ZqTKE
+YdLcywUFht2n3uOmjAHoUqRf7yv9QvufdlzQPPrzmA79GQzxOPPhung+7UoB0x3v
+dR+sVzN1jALmsTatWZiQ5IrE/twqhZ6qpHiOXgKTuEjF8vidUeMGcKpx+VuK4rU=
+=PCxU
 -----END PGP SIGNATURE-----
