@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/urllib3/urllib3-1.8-r1.ebuild,v 1.1 2014/03/07 09:13:07 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/urllib3/urllib3-1.8-r1.ebuild,v 1.2 2014/03/07 19:37:20 radhermit Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python{2_6,2_7,3_2,3_3} pypy2_0 )
@@ -19,7 +19,7 @@ IUSE="test"
 RDEPEND="dev-python/six[${PYTHON_USEDEP}]
 	$(python_gen_cond_dep \
 		"dev-python/backports-ssl-match-hostname[$(python_gen_usedep 'python2*')]" \
-		python2*)"
+		python2* pypy2_0)"
 DEPEND="dev-python/setuptools[${PYTHON_USEDEP}]
 	test? (
 		>=www-servers/tornado-2.4.1[${PYTHON_USEDEP}]
