@@ -6,9 +6,9 @@ HOMEPAGE=https://github.com/shazow/urllib3
 IUSE=test python_targets_python2_6 python_targets_python2_7 python_targets_python3_2 python_targets_python3_3 python_targets_pypy2_0
 KEYWORDS=~amd64 ~x86
 LICENSE=MIT
-RDEPEND=dev-python/six[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_python3_2(-)?,python_targets_python3_3(-)?,python_targets_pypy2_0(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_python3_2(-),-python_single_target_python3_3(-),-python_single_target_pypy2_0(-)] python_targets_python2_6? ( dev-python/backports-ssl-match-hostname[python_targets_python2_6(-)?,-python_single_target_python2_6(-),python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) python_targets_python2_7? ( dev-python/backports-ssl-match-hostname[python_targets_python2_6(-)?,-python_single_target_python2_6(-),python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) python_targets_python3_2? ( >=dev-lang/python-3.2.5-r2:3.2 ) python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3 ) python_targets_pypy2_0? ( >=virtual/pypy-2.0.2:2.0 ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_python3_2(-)?,python_targets_python3_3(-)?,python_targets_pypy2_0(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_python3_2(-),-python_single_target_python3_3(-),-python_single_target_pypy2_0(-)]
+RDEPEND=dev-python/six[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_python3_2(-)?,python_targets_python3_3(-)?,python_targets_pypy2_0(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_python3_2(-),-python_single_target_python3_3(-),-python_single_target_pypy2_0(-)] python_targets_python2_6? ( dev-python/backports-ssl-match-hostname[python_targets_python2_6(-)?,-python_single_target_python2_6(-),python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) python_targets_python2_7? ( dev-python/backports-ssl-match-hostname[python_targets_python2_6(-)?,-python_single_target_python2_6(-),python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) python_targets_pypy2_0? ( dev-python/backports-ssl-match-hostname[python_targets_python2_6(-)?,-python_single_target_python2_6(-),python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) python_targets_python3_2? ( >=dev-lang/python-3.2.5-r2:3.2 ) python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3 ) python_targets_pypy2_0? ( >=virtual/pypy-2.0.2:2.0 ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_python3_2(-)?,python_targets_python3_3(-)?,python_targets_pypy2_0(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_python3_2(-),-python_single_target_python3_3(-),-python_single_target_pypy2_0(-)]
 REQUIRED_USE=|| ( python_targets_python2_6 python_targets_python2_7 python_targets_python3_2 python_targets_python3_3 python_targets_pypy2_0 )
 SLOT=0
 SRC_URI=mirror://pypi/u/urllib3/urllib3-1.8.tar.gz
 _eclasses_=distutils-r1	364122897f9dc771167ee5ff362e54e1	eutils	40081e8c7e7f7c4f9db349a1d6d52925	multibuild	56d4120419072116417e8de1bd1040ff	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	python-r1	3bb814ab7959a36067101a6bef683b6f	python-utils-r1	86e503f2f5e7da7163dc3e07c12cea62	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=d657cd3bfd1c8b2b24df59e829875cc7
+_md5_=56a7d37605fa6569f68d8f1991d9e858
