@@ -1,6 +1,12 @@
 # ChangeLog for sci-mathematics/gimps
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/gimps/ChangeLog,v 1.63 2014/02/15 12:22:34 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/gimps/ChangeLog,v 1.64 2014/03/07 19:32:56 tomka Exp $
+
+*gimps-28.5 (07 Mar 2014)
+
+  07 Mar 2014; Thomas Kahle <tomka@gentoo.org> +gimps-28.5.ebuild,
+  +files/gimps.service-r1:
+  bump to 28.5 (bug #503710) and improve systemd files (bug #503714)
 
 *gimps-28.3-r1 (15 Feb 2014)
 
